text sent wrapping issue

--- a/public/css/iMessage.css
+++ b/public/css/iMessage.css
@@ -63,6 +63,7 @@ body {
  
 .iPhone .text.sent {
 	float: right;
+	word-wrap: break-word;
 	background: -moz-linear-gradient(90deg, #b6e74d 0%, #8fd13e 25.6%, #8acf43 79.9%, #4ab947 100%) #8fd13e;
 	background: -webkit-gradient(linear, left bottom, left top, from(#b6e74d), color-stop(0.256, #8fd13e), color-stop(0.799, #8acf43), to(#4ab947)) #8fd13e;
 	margin-left: 140px;
